# daily-arXiv-ai-enhanced

./: .gitignore  CNAME  LICENSE  README.md  _config.yml  index.html  login.html  pyproject.toml  readme_content_template.md  run.sh  settings.html  setup-local-auth.sh  statistic.html  template.md  update_readme.py
ai/: enhance.py  structure.py  system.txt  template.txt
assets/: file-list.json  file-list.txt
css/: settings.css  statistic.css  styles.css
daily_arxiv/: config.yaml  scrapy.cfg
data/: 2025-03-18.jsonl  2025-03-18.md  2025-03-19.jsonl  2025-03-19.md  2025-03-19_AI_enhanced_Chinese.jsonl  2025-03-20.jsonl  2025-03-20.md  2025-03-20_AI_enhanced_Chinese.jsonl  2025-03-21.jsonl  2025-03-21.md  2025-03-21_AI_enhanced_Chinese.jsonl  2025-03-22.jsonl  2025-03-22.md  2025-03-22_AI_enhanced_Chinese.jsonl  2025-03-23.md  2025-03-23_AI_enhanced_Chinese.jsonl  2025-03-24.jsonl  2025-03-24.md  2025-03-24_AI_enhanced_Chinese.jsonl  2025-03-25.jsonl  2025-03-25.md  2025-03-25_AI_enhanced_Chinese.jsonl  2025-03-26.jsonl  2025-03-26.md  2025-03-26_AI_enhanced_Chinese.jsonl  2025-03-27.jsonl  2025-03-27.md  2025-03-27_AI_enhanced_Chinese.jsonl  2025-03-28.jsonl  2025-03-28.md  2025-03-28_AI_enhanced_Chinese.jsonl  2025-03-29.md  2025-03-29_AI_enhanced_Chinese.jsonl  2025-03-30.md  2025-03-30_AI_enhanced_Chinese.jsonl  2025-03-31.jsonl  2025-03-31.md  2025-03-31_AI_enhanced_Chinese.jsonl  2025-04-01.jsonl  2025-04-01.md  (+1042 more)
docs/: index.html
docs/css/: styles.css
js/: app.js  auth-config.js  auth.js  settings.js  statistic.js
to_md/: convert.py  paper_template.md
(+8 files in other folders)
